crates/toml_edit/tests/snapshots/invalid/string/bad-uni-esc-07.stderr
TOML parse error at line 1, column 24
  |
1 | bad-uni-esc-07 = "\uabag"
  |                        ^
too few unicode value digits, expected unicode hexadecimal value
